fix: fit input width on safari
Safaris user agent uses default another font for inputs. So input width
became bigger than table width. Both had the same value "70ch" but
this is depending on font-familiy. So I set font-family inherit.

--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ label, input {
 
 input {
   font-size: medium;
+  font-family: inherit;
   height: 2.5em;
   margin-top: 0.2em;
   padding: 5px 10px;
